@@ -66,7 +66,9 @@ public class ClientUtils
    * @param d SolrDocument to convert
    * @return a SolrInputDocument with the same fields and values as the
    *   SolrDocument.  All boosts are 1.0f
+   * @deprecated This method will be removed in Solr 6.0
    */
+  @Deprecated
   public static SolrInputDocument toSolrInputDocument( SolrDocument d )
   {
     SolrInputDocument doc = new SolrInputDocument();
@@ -79,7 +81,9 @@ public class ClientUtils
   /**
    * @param d SolrInputDocument to convert
    * @return a SolrDocument with the same fields and values as the SolrInputDocument
+   * @deprecated This method will be removed in Solr 6.0
    */
+  @Deprecated
   public static SolrDocument toSolrDocument(SolrInputDocument d) {
     SolrDocument doc = new SolrDocument();
     for (SolrInputField field : d) {
